Fix width of sidebar content overflowing.

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -333,6 +333,7 @@
     &.is--visible {
         display: block;
         left: 0px;
+        width: auto;
     }
 
     @include breakpoint($large) {
